# team-devsecops

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  best_practices.md  docker-compose.yml  openapitools.json  redocly.yaml
services/py-recipe-service/client/: README.md  pyproject.toml
services/py-recipe-service/client/cooking_assistant_api_client/: __init__.py
services/py-recipe-service/client/cooking_assistant_api_client/api/ai/: post_ai_help.py  post_ai_recipes.py
services/py-recipe-service/client/cooking_assistant_api_client/api/recipes/: get_recipes.py  get_recipes_recipe_id.py  post_recipes.py  put_recipes_recipe_id.py
services/py-recipe-service/client/cooking_assistant_api_client/api/users/: delete_users_profile.py  get_users_profile.py  (+4 more)
services/py-recipe-service/client/cooking_assistant_api_client/models/: __init__.py  authentication_request.py  help_response.py  login_request.py  recipe.py  recipe_input.py  recipe_nutrients.py  recipe_request.py  recipe_request_forwarded.py  recipe_request_language.py  user_credentials.py  user_preferences.py  user_preferences_language.py  user_profile.py  user_profile_preferences.py  user_profile_update.py
services/py-recipe-service/client/cooking_assistant_gen_ai_services_api_internal_client/: __init__.py
services/py-recipe-service/client/cooking_assistant_gen_ai_services_api_internal_client/models/: __init__.py  error_response.py  get_health_response_200.py  help_response.py  nutrient_request_forwarded.py  recipe_nutrients.py  user_preferences_language.py
(+1705 files in other folders)
