[tool.poetry]
name = "cooking-assistant-gen-ai-services-api-internal-client"
version = "1.0.0"
description = "A client library for accessing Cooking Assistant GenAI Services API (Internal)"
authors = []
readme = "README.md"
packages = [
    { include = "cooking_assistant_gen_ai_services_api_internal_client" },
]
include = ["cooking_assistant_gen_ai_services_api_internal_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.1,<0.29.0"
attrs = ">=22.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
